crud corregido